crates/shell/src/shells/snapshots/starbase_shell__shells__zsh__tests__formats_context_change_hook.snap
---
source: crates/shell/src/shells/zsh.rs
expression: "Zsh::new().format_hook(hook).unwrap()"
---
_starbase_hook() {
  local output
  trap '' SIGINT
  output=$(starbase hook zsh)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  trap - SIGINT
}

_starbase_deactivate() {
  local output
  output=$(starbase deactivate zsh)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  chpwd_functions=(${chpwd_functions:#_starbase_hook})
  precmd_functions=(${precmd_functions:#_starbase_hook})
  unfunction _starbase_hook _starbase_deactivate 2>/dev/null
}

typeset -ag chpwd_functions
if (( ! ${chpwd_functions[(I)_starbase_hook]} )); then
  chpwd_functions=(_starbase_hook $chpwd_functions)
fi

typeset -ag precmd_functions
if (( ! ${precmd_functions[(I)_starbase_hook]} )); then
  precmd_functions=(_starbase_hook $precmd_functions)
fi
