crates/shell/src/shells/snapshots/starbase_shell__shells__zsh__tests__formats_register_handlers_hook.snap
---
source: crates/shell/src/shells/zsh.rs
expression: "Zsh::new().format_hook(Hook::RegisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
typeset -ag chpwd_functions
if (( ! ${chpwd_functions[(I)_starbase_hook]} )); then
  chpwd_functions=(_starbase_hook $chpwd_functions)
fi

typeset -ag precmd_functions
if (( ! ${precmd_functions[(I)_starbase_hook]} )); then
  precmd_functions=(_starbase_hook $precmd_functions)
fi
