crates/shell/src/shells/snapshots/starbase_shell__shells__zsh__tests__formats_unregister_handlers_hook.snap
---
source: crates/shell/src/shells/zsh.rs
expression: "Zsh::new().format_hook(Hook::UnregisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
chpwd_functions=(${chpwd_functions:#_starbase_hook})
precmd_functions=(${precmd_functions:#_starbase_hook})
